# lerobot

./: .gitignore  evaluate.py  lekiwi_paper_draft.md  pc_logoplanner_client.py
lekiwi_rgbd_sim2real_agv/: README.md  pyproject.toml  requirements.txt  setup.py
lekiwi_rgbd_sim2real_agv/app/: __init__.py  dashboard.py  run_offline_replay.py  run_real_demo.py  run_rgbd_mock_demo.py  run_sim_demo.py
lekiwi_rgbd_sim2real_agv/baselines/: __init__.py  behavior_cloning.py  dwa_baseline.py
lekiwi_rgbd_sim2real_agv/camera/: __init__.py  depth_quality_monitor.py
lekiwi_rgbd_sim2real_agv/communication/: __init__.py  client.py  dataset_writer.py  host.py
lekiwi_rgbd_sim2real_agv/configs/: camera_d435i.yaml  dataset.yaml  perception.yaml  robot_lekiwi.yaml  safety_model.yaml  sim.yaml
lekiwi_rgbd_sim2real_agv/control/: __init__.py  action_adapter.py  dwa_policy.py  emergency_shield.py  residual_controller.py
lekiwi_rgbd_sim2real_agv/data_adapters/: __init__.py  base_adapter.py  data_splitter.py  gnm_adapter.py  habitat_adapter.py  observation_normalizer.py  robothor_adapter.py
lekiwi_rgbd_sim2real_agv/eval/: __init__.py  metrics.py  offline_evaluator.py
lekiwi_rgbd_sim2real_agv/learning/: __init__.py  build_dataset.py  eval_model.py  residual_model.py  risk_scorer.py  train_residual.py
lekiwi_rgbd_sim2real_agv/lekiwi_deployment/: __init__.py  deployment_runner.py  observation_assembler.py
lekiwi_rgbd_sim2real_agv/lerobot_conversion/: __init__.py  lerobot_schema.py  unified_to_lerobot.py  validate_dataset.py
lekiwi_rgbd_sim2real_agv/lerobot_ext/: __init__.py  (+4 more)
(+101 files in other folders)
